[package]
name = "calsync"
version = "0.1.0"
authors = ["Teddy Heinen <teddy@heinen.dev>"]
edition = "2018"
description = "CLI tool to copy assignments off of canvas and into ICS format"
repository = "https://github.com/tcheinen/calsync"
license = "LICENSE"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
color-eyre = "0.5.10"
log = "0.4"
pretty_env_logger = "0.4"
dotenv = "0.15"
tokio = { version = "1", features = ["full"] }
reqwest = { version = "0.11.0", features = ["json"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1"
chrono = { version = "0.4.19", features = ["serde"] }
futures = "0.3"
uuid = { version = "0.8", features = ["serde", "v4"] }
ics = "0.5"
structopt = "0.3"
sha2 = "0.9.2"
